@@ -1,3 +1,5 @@
+2012-12-03 Franz Holzinger <franz@ttproducts.de>
+	* fix bug: do not use passthrough fields in $TCA
 
 2012-11-19 Franz Holzinger <franz@ttproducts.de>
 	* replace deprecated t3lib_div::intInRange by t3lib_utility_Math::forceIntegerInRange in function getQueryConf
